updated in class name in parent div

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 <body>
 
     <div id="myCarousel carousel-example-generic"
-        class="carousel slide"
+        class="myCarousel slide"
         data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
