add id to crousel item parent div

--- a/main.html
+++ b/main.html
@@ -18,27 +18,27 @@
 
 <body>
 
-    <div id="myCarousel carousel-example-generic"
-        class="myCarousel slide"
+    <div id="carousel-example-generic"
+        class="carousel slide"
         data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel"
+            <li data-target="#carousel-example-generic"
                 data-slide-to="0"
                 ></li>
-            <li data-target="#myCarousel"
+            <li data-target="#carousel-example-generic"
                 data-slide-to="1"></li>
-            <li data-target="#myCarousel"
+            <li data-target="#carousel-example-generic"
                 data-slide-to="2"
                 class="active"></li>
-            <li data-target="#myCarousel"
+            <li data-target="#carousel-example-generic"
             data-slide-to="3"></li>
-            <li data-target="#myCarousel"
+            <li data-target="#carousel-example-generic"
                 data-slide-to="4"></li>
         </ol>
 
         <!-- Wrapper for slides -->
-        <div class="carousel-inner"
+        <div class="carousel-inner" id="myCarousel"
             role="listbox">
             <div class="item first-slide">
                 <img src="https://imgd.aeplcdn.com/1056x594/n/cw/ec/102709/ntorq-125-right-front-three-quarter.jpeg?isig=0&q=75"
